# backstage-foundry

./: .gitignore  Dockerfile  docker-compose.yaml
backstage/: app-config.yaml
catalog/: README.md  domain.yaml  group.yaml  groups.yaml  systems.yaml  users.yaml
infra/: alb.tf  ec2.tf  ecs.tf  main.tf  nat.tf  provider.tf  security.tf  variables.tf
techdocs/: catalog-info.yaml  mkdocs.yaml
techdocs/docs/: index.md  subsection_1.md  subsection_2.md
techdocs/docs/fellowships/: overview.md
techdocs/docs/fellowships/genai/: index.md
templates/template-aws-lambda/: template.yaml
templates/template-aws-lambda/app/: Dockerfile  README.md  azure-pipelines.yaml  catalog-info.yaml  pyproject.toml
templates/template-aws-lambda/app/scripts/: run_app.py
templates/template-aws-lambda/app/src/app/: main.py
templates/template-aws-lambda/infra/: README.md  azure-pipelines.yaml  catalog-info.yaml  main.tf  providers.tf  variables.tf
